# chat_bot

./: .dockerignore  .env  Dockerfile  chat_history_sample.txt  docker-compose.yml  main.py  pyproject.toml  requirements.txt
